<resources>
    <string name="app_name">e-Summit</string>
    <string name="text_sponsors">Sponsors</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_home">Home</string>
    <string name="text_contact">Contact Us</string>
    <string name="text_about">About Us</string>
    <string name="text_events">Events</string>
    <string name="action_notification">Notification</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_child">Notifications</string>
    <string name="aboutUs">About Us</string>
    <string name="Ted_Talks">Ted Talks</string>
    <string name="MyEvents">Registered Events</string>
    <string name="Logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_content_main">content_main</string>
</resources>
