<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@mipmap/homeblack"
        android:title="@string/text_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_events"
        android:enabled="true"
        android:icon="@mipmap/ic_event_black_24dp"
        android:title="@string/text_events"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sponsors"
        android:enabled="true"
        android:icon="@mipmap/ic_attach_money_black_24dp"
        android:title="@string/text_sponsors"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_schedules"
        android:enabled="true"
        android:icon="@mipmap/ic_schedule_black_24dp"
        android:title="@string/text_schedules"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_contact"
        android:enabled="true"
        android:icon="@mipmap/ic_contact_phone_black_24dp"
        android:title="@string/text_contact"
        app:showAsAction="ifRoom" />
    <!--<item
        android:id="@+id/action_about"
        android:enabled="true"
        android:icon="@mipmap/ic_info_black_24dp"
        android:title="@string/text_about"
        app:showAsAction="ifRoom" />-->

</menu>