<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_notification"
        android:icon="@mipmap/ic_notifications_white_24dp"
        android:title="@string/action_notification"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_logout"
        android:icon="@drawable/ic_lock_open_white_18dp"
        android:title="@string/Logout"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_aboutus"
        android:icon="@drawable/info_white_18dp"
        android:title="@string/aboutUs"
        app:showAsAction="ifRoom"/>

</menu>